Fixed footer issue on mobile

--- a/blogs/styles/style.css
+++ b/blogs/styles/style.css
@@ -125,3 +125,21 @@ ul {
     width: 70%;
     margin: 0 auto;
 }
+
+@media (max-width: 900px) {
+    .grid-container {
+        display: grid;
+        grid-template-areas: 
+            "header-box header-box header-box"
+            "side-panel-left main-content side-panel-right"
+        ;
+    
+        grid-template-columns: 1fr 4fr 1fr;
+        grid-template-rows: 1fr 8fr;
+        grid-gap: 10px;
+        height: 100vh;
+    }
+    .footer {
+        display: none;
+    }
+}
